Compatibility with Nova 4

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "anaseqal/nova-import",
+    "name": "s-patompong/nova-import",
     "description": "A Laravel Nova import tool.",
     "keywords": [
         "laravel",
